Add files related to Career Guidance System

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="image 11.png" class="logo_img" alt="Dream Mechants Logo" width=250px height=200px></a>
+        <a class="navbar-brand" href="#"><img src="Images/image 11.png" class="logo_img" alt="Dream Mechants Logo" width=250px height=200px></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fas fa-bars"></i>
         </button>
@@ -391,7 +391,7 @@
         <div class="col-sm col-lg-6 col-xl-6" style="padding: 130px;">
           <div class="single-person ">
             <div class="person-image">
-              <img src="ruth.png" alt="">
+              <img src="Images/ruth.png" alt="">
 
             </div>
             <div class=" person-info">
@@ -408,7 +408,7 @@
         <div class="col-sm col-lg-6 col-xl-6" style="padding: 130px;">
           <div class="single-person ">
             <div class="person-image">
-              <img src="image 9.png" alt="">
+              <img src="Images/image 9.png" alt="">
 
             </div>
             <div class="person-info">
@@ -443,7 +443,7 @@
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
             <div class="person-image">
-              <img src="img5.jpg" alt="">
+              <img src="Images/img5.jpg" alt="">
 
             </div>
             <div class="person-info">
@@ -460,7 +460,7 @@
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
             <div class="person-image">
-              <img src="img13.png" alt="">
+              <img src="Images/img13.png" alt="">
 
             </div>
             <div class="person-info">
@@ -478,7 +478,7 @@
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
             <div class="person-image">
-              <img src="img12.jpg" alt="">
+              <img src="Images/img12.jpg" alt="">
 
             </div>
             <div class="person-info">
@@ -496,7 +496,7 @@
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
             <div class="person-image">
-              <img src="img11.jpg" alt="">
+              <img src="Images/img11.jpg" alt="">
 
             </div>
             <div class="person-info">
@@ -539,7 +539,7 @@
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
             <div class="person-image">
-              <img src="img4.jpg" alt="">
+              <img src="Images/img4.jpg" alt="">
 
             </div>
             <div class="person-info">
@@ -556,7 +556,7 @@
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
             <div class="person-image">
-              <img src="img6.jpg" alt="">
+              <img src="Images/img6.jpg" alt="">
 
             </div>
             <div class="person-info">
@@ -573,7 +573,7 @@
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
             <div class="person-image">
-              <img src="img7.jpg" alt="">
+              <img src="Images/img7.jpg" alt="">
 
             </div>
             <div class="person-info">
@@ -688,22 +688,22 @@
     <div class="slider">
       <div class="slide-track" style="background-color: black;">
         <div class="slide">
-          <img class="photo-gallery" src="image 1.png" height="300" width="450" alt="" />
+          <img class="photo-gallery" src="Images/image 1.png" height="300" width="450" alt="" />
         </div>
         <div class="slide">
-          <img class="photo-gallery" src="image 2.png" height="300" width="450" alt="" />
+          <img class="photo-gallery" src="Images/image 2.png" height="300" width="450" alt="" />
         </div>
         <div class="slide">
-          <img class="photo-gallery" src="image 3.png" height="300" width="450" alt="" />
+          <img class="photo-gallery" src="Images/image 3.png" height="300" width="450" alt="" />
         </div>
         <div class="slide">
-          <img class="photo-gallery" src="image 4.png" height="300" width="450" alt="" />
+          <img class="photo-gallery" src="Images/image 4.png" height="300" width="450" alt="" />
         </div>
         <div class="slide">
-          <img class="photo-gallery" src="image 5.png" height="300" width="450" alt="" />
+          <img class="photo-gallery" src="Images/image 5.png" height="300" width="450" alt="" />
         </div>
         <div class="slide">
-          <img class="photo-gallery" src="img1.png" height="300" width="450" alt="" />
+          <img class="photo-gallery" src="Images/img1.png" height="300" width="450" alt="" />
         </div>
       </div>
     </div>
@@ -767,7 +767,7 @@
           <div class="col-xl-4 col-lg-4 mb-50">
             <div class="footer-widget">
               <div class="footer-logo">
-                <a href="#"><img src="AboutVIT.jfif" class="img-fluid logo_img" alt="logo"></a>
+                <a href="#"><img src="Images/AboutVIT.jfif" class="img-fluid logo_img" alt="logo"></a>
               </div>
               <div class="footer-text">
                 <p>Career Counciling System</p>
@@ -801,13 +801,13 @@
             <div class="footer-widget">
               <h5>Developers</h5>
               <div>
-                <img class="dev_img" src="lassu.png" alt="shanu">
+                <img class="dev_img" src="Images/lassu.png" alt="shanu">
 
-                <img class="dev_img dev_img_r" src="ruth.png" alt="rutvik">
+                <img class="dev_img dev_img_r" src="Images/ruth.png" alt="rutvik">
               </div>
               <br>
-              <img class="team_socials dev_social_shanu" src="Linkedinn.png" alt="linkedin">
-              <img class="team_socials dev_social_ruthvik" src="Linkedinn.png" alt="linkedin">
+              <img class="team_socials dev_social_shanu" src="Images/Linkedinn.png" alt="linkedin">
+              <img class="team_socials dev_social_ruthvik" src="Images/Linkedinn.png" alt="linkedin">
 
 
             </div>
