--- a/index.html
+++ b/index.html
@@ -522,11 +522,11 @@
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
             <div class="person-image">
-              <img src="images/shreya.jpg" alt="">
+              <img src="images/img105.jpg" alt="">
 
             </div>
             <div class="person-info">
-              <h4 class="full-name">Shreya</h4>
+              <h4 class="full-name">Satwik</h4>
               <span class="speciality">MBBS</span>
               <div class="team_ka_socials">
                 <img class="team_socials" src="linkedinn.png" alt="linkedin">
