The updated index

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:500,700&display=swap" rel="stylesheet">
-  <title>Dream Merchants VIT</title>
+  <title>IWP J-Component</title>
 </head>
 
 <body>
@@ -57,10 +57,10 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Team</a>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sponsors</a>
+              <a class="nav-link" href="#">Blogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blogs</a>
+              <button class="btn158" style="background-color:#FD6A00;" <a class="nav-link531" href="#">Get Started</a></button>
             </li>
 
           </ul>
@@ -77,10 +77,10 @@
 
     <div class="" id="landing-page">
       <div class="landing_container">
-        <h1 class="landing_page_header">The Strix</h1>
+        <h1 class="landing_page_header" style="color:#FD6A00;">The Strix</h1>
 
         <div class='landing_page_slogan console-container'>
-          <p class="text">A place where students excel </p><span id='text'></span>
+          <p class="text" style="color:#FD6A00;">A place where students excel </p><span id='text'></span>
           <div class='console-underscore' id='console'>&#95;</div>
         </div>
 
@@ -99,7 +99,7 @@
 
   <div class="" style="background-color: black;">
     <div class="about-us " id="about-us">
-      <h1 class="Heading">About us</h1>
+      <h1 class="Heading" style="color:#FD6A00;">About us</h1>
       <p class="about_us_text">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
         book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
@@ -123,7 +123,7 @@
       <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top"><img src="images/upload.png" class="upToTop" alt="up arrow"></button>
     </div>
 
-    <h1 class="event_Heading"> Physcometric Assesments</h1>
+    <h1 class="event_Heading" style="color:#FD6A00;"> Physcometric Assesments</h1>
 
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
@@ -250,7 +250,7 @@
 
   <!-- BLOGS -->
   <div class="blogs">
-    <h1 class="event_Heading">Our Courses</h1>
+    <h1 class="event_Heading" style="color:#FD6A00;">Our Courses</h1>
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -377,7 +377,7 @@
         <div class="col-md-8 col-lg-6">
           <div class="header-section">
             <h3 class="small-title">Our Team</h3>
-            <h2 class="title">Introducing our <br><br> Founders</h2>
+            <h2 class="title" style="color:#FD6A00;">Introducing our <br><br> Founders</h2>
           </div>
         </div>
       </div>
@@ -398,7 +398,7 @@
               <h4 class="full-name">Dr.Sai Ruthvik <br> Kasi</h4>
               <span class="speciality">Founder</span>
               <div class="team_ka_socials">
-                <img class="team_socials" src="C:\Users\Sai Ruthvik Kasi\Desktop\WebDev\DM website_main\linkedinn.png" alt="linkedin">
+                <img class="team_socials" src="C:\Users\Sai Ruthvik Kasi\Desktop\WebDev\DM website_main\Images\linkedinn.png" alt="linkedin">
               </div>
             </div>
           </div>
@@ -408,14 +408,14 @@
         <div class="col-sm col-lg-6 col-xl-6" style="padding: 130px;">
           <div class="single-person ">
             <div class="person-image">
-              <img src="Images/image 9.png" alt="">
+              <img src="C:\Users\Sai Ruthvik Kasi\Desktop\WebDev\DM website_main\Images\Image 9.png" alt="">
 
             </div>
             <div class="person-info">
               <h4 class="full-name">Mr.Danish <br> Ansari</h4>
               <span class="speciality">Founder</span>
               <div class="team_ka_socials">
-                <img class="team_socials" src="C:\Users\Sai Ruthvik Kasi\Desktop\WebDev\DM website_main\linkedinn.png" alt="linkedin">
+                <img class="team_socials" src="C:\Users\Sai Ruthvik Kasi\Desktop\WebDev\DM website_main\Images\linkedinn.png" alt="linkedin">
               </div>
             </div>
           </div>
@@ -433,7 +433,7 @@
       <div class="row justify-content-center text-center">
         <div class="col-md-8 col-lg-6">
           <div class="header-section">
-            <h2 class="title">Introducing our <br><br> Professors</h2>
+            <h2 class="title" style="color:#FD6A00;">Introducing our <br><br> Professors</h2>
           </div>
         </div>
       </div>
@@ -450,7 +450,7 @@
               <h4 class="full-name">Sagar</h4>
               <span class="speciality">Engineering</span>
               <div class="team_ka_socials">
-                <img class="team_socials" src="images/linkedin.png" alt="linkedin">
+                <img class="team_socials" src="Images\linkedinn.png" alt="linkedin">
               </div>
             </div>
           </div>
@@ -467,7 +467,7 @@
               <h4 class="full-name">Shreedhar</h4>
               <span class="speciality">Commerce</span>
               <div class="team_ka_socials">
-                <img class="team_socials" src="linkedinn.png" alt="linkedin">
+                <img class="team_socials" src="Images\linkedinn.png" alt="linkedin">
               </div>
             </div>
           </div>
@@ -486,7 +486,7 @@
 
               <span class="speciality">Humanities</span>
               <div class="team_ka_socials">
-                <img class="team_socials" src="linkedinn.png" alt="linkedin">
+                <img class="team_socials" src="Images\linkedinn.png" alt="linkedin">
               </div>
             </div>
           </div>
@@ -503,7 +503,7 @@
               <h4 class="full-name">Sanjitha</h4>
               <span class="speciality">Law</span>
               <div class="team_ka_socials">
-                <img class="team_socials" src="linkedinn.png" alt="linkedin">
+                <img class="team_socials" src="Images\linkedinn.png" alt="linkedin">
               </div>
             </div>
           </div>
@@ -529,7 +529,7 @@
               <h4 class="full-name">Satwik</h4>
               <span class="speciality">MBBS</span>
               <div class="team_ka_socials">
-                <img class="team_socials" src="linkedinn.png" alt="linkedin">
+                <img class="team_socials" src="Images\linkedinn.png" alt="linkedin">
               </div>
             </div>
           </div>
@@ -546,7 +546,7 @@
               <h4 class="full-name">Aryan</h4>
               <span class="speciality">Marketing</span>
               <div class="team_ka_socials">
-                <img class="team_socials" src="linkedinn.png" alt="linkedin">
+                <img class="team_socials" src="Images\linkedinn.png" alt="linkedin">
               </div>
             </div>
           </div>
@@ -563,7 +563,7 @@
               <h4 class="full-name">Karnik</h4>
               <span class="speciality">Hindi</span>
               <div class="team_ka_socials">
-                <img class="team_socials" src="linkedinn.png" alt="linkedin">
+                <img class="team_socials" src="Images\linkedinn.png" alt="linkedin">
               </div>
             </div>
           </div>
@@ -580,7 +580,7 @@
               <h4 class="full-name">Abhinav</h4>
               <span class="speciality">Arts</span>
               <div class="team_ka_socials">
-                <img class="team_socials" src="linkedinn.png" alt="linkedin">
+                <img class="team_socials" src="Images\linkedinn.png" alt="linkedin">
               </div>
             </div>
           </div>
@@ -617,7 +617,7 @@
         <div class="col-md-8 col-lg-6">
           <div class="header-section">
             <h3 class="small-title">Our Team</h3>
-            <h2 class="title">Blogs</h2>
+            <h2 class="title" style="color:#FD6A00;">Blogs</h2>
           </div>
         </div>
       </div>
@@ -682,7 +682,7 @@
 
 
   <div class="gallery" id="photo-gallery">
-    <h1 class="photo_header">Photo Gallery</h1>
+    <h1 class="photo_header" style="color:#FD6A00;">Photo Gallery</h1>
 
 
     <div class="slider">
